# jetpham-com

./: .gitignore  Cargo.toml  LICENSE  README.md  hx  index.html  install.sh  watchexec
.obsidian/: workspace.json
src/: automata.rs  cell.rs  main.rs
